test/expected/explain_fo_plus_2crk_b++default.out
struct S; explain friend bool operator+(S const&, S const&) = default
                   ^
20: error: only operator = and relational operators can be default
